# wallet-live

./: .env  Cargo.toml  README.md  compose.yml  readme.md
migrations/: 20260614135439_create-assets.down.sql  20260614135439_create-assets.up.sql  20260614191551_create_users.up.sql  20260618005709_create_owned_assets.down.sql  20260618005709_create_owned_assets.up.sql
src/: app.rs  error.rs  main.rs  models.rs  repository copy.rs  repository.rs
src/auth/: admin.rs  mod.rs  user.rs
src/routes/: api.rs  chat.rs  dashboard.rs  frontend.rs  mod.rs
src/routes/fixtures/: bitcoin_asset.sql
src/routes/snapshots/: wallet_live__routes__api__tests__create_asset.snap  wallet_live__routes__api__tests__list_assets.snap  wallet_live__routes__api__tests__update_asset.snap
templates/: asset_detail.html  asset_detail_dashboard.html  assets.html  chat.html  dashboard.html  edit_asset.html  login.html  new_asset.html
